--- a/cookbook/meal-prep.html
+++ b/cookbook/meal-prep.html
@@ -15,47 +15,44 @@
                 <h2 id="brand"><a href="./meal-prep.html">The Instructor's Cookbook</a></h2>
                 <div id="quote"></div>
                 <div id="navLinks">
-                    <div class="dropdown-menu meal-prep-filter">
-                        <h2 class="dropdown-trigger">
-                            <a href="meal-prep.html">
-                                By Category
-                                <i class="fa-solid fa-chevron-down"></i>
-                            </a>
-                        </h2>
-                        <div class="dropdown-items">
-                            <h2><a href="meal-prep.html?category=demo">Demos</a></h2>
-                            <h2><a href="meal-prep.html?category=drills">Drills</a></h2>
-                            <h2><a href="meal-prep.html?category=exercise">Exercises</a></h2>
-                            <h2><a href="meal-prep.html?category=project">Projects</a></h2>
-                        </div>
-                    </div>
-                    <div class="dropdown-menu meal-prep-filter">
-                        <h2 class="dropdown-trigger">
-                            <a href="meal-prep.html">
-                                By Week
-                                <i class="fa-solid fa-chevron-down"></i>
-                            </a>
-                        </h2>
-                        <div class="dropdown-items">
-                            <h2><a href="meal-prep.html?category=week1">Week 1</a></h2>
-                            <h2><a href="meal-prep.html?category=week2">Week 2</a></h2>
-                            <h2><a href="meal-prep.html?category=week3">Week 3</a></h2>
-                            <h2><a href="meal-prep.html?category=week4">Week 4</a></h2>
-                            <h2><a href="meal-prep.html?category=week5">Week 5</a></h2>
-                            <h2><a href="meal-prep.html?category=week6">Week 6</a></h2>
-                            <h2><a href="meal-prep.html?category=week8">Week 8</a></h2>
-                        </div>
-                    </div>
                     <h2><a href="./">Student Resources</a></h2>
                 </div>
             </header>
             <header id="bottomHeader">
-                <div class="cookbookButtons">
-                    <button id="cardsButton" class="hide">Cards View</button>
-                    <button id="listButton" class="hide">List View</button>
-                    <button id="backButton" class="hide">Back to <span id="backTo"></span></button>
-                    <button id="commentsButton" class="hide"><span id="hideCommentsLabel">Hide</span><span id="showCommentsLabel">Show</span> Comments</button>
+                <div id="cookbookButtons">
+                    <div id="viewButtons" class="hide">
+                        <button id="cardsButton">Cards View</button>
+                        <button id="listButton">List View</button>
+                        <button id="sortFilterButton">
+                            <span id="sortFilterLabel">Sort/Filter</span>&nbsp;
+                            <span id="sortFilterClose"><i class="fa-solid fa-xmark"></i></span>
+                        </button>
+                    </div>
+                    <div id="detailsButtons" class="hide">
+                        <button id="backButton">Back to <span id="backTo"></span></button>
+                        <button id="commentsButton"><span id="hideCommentsLabel">Hide</span><span id="showCommentsLabel">Show</span> Comments</button>
+                    </div>
                 </div>
+            </header>
+            <header id="filtersAndSortingHeader" class="hide">
+                <div id="sortingSection">
+                    <h4>Sorting Methods</h4>
+                    <div id="sortingOptions">
+                        <button id="defaultSortButton" class="default selected">Default</button>
+                        <button id="alphaAscSortButton">A - Z</button>
+                        <button id="alphaDescSortButton">Z - A</button>
+                    </div>
+                </div>
+                <div id="filterSection">
+                    <h4>Filter Categories</h4>
+                    <div id="filterOptions"></div>
+                </div>
+                <div id="confirmationSection">
+                    <h4>Confirm Changes</h4>
+                    <div id="confirmationOptions">
+                        <button id="applyChangesButton" class="">Apply</button>
+                        <button id="cancelChangesButton" class="">Cancel</button>
+                    </div>
             </header>
         </nav>
         
