--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,22 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 18th, 2024</h1>
+            <h1>GDWD 105 - Agenda for January 19th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite genre of book to read?</li>
+                        <li>What is your favorite TV series/anime?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space-offset">
                         <img 
-                            src="images/books_happy_place.jpg"
-                            alt="dessert first"
+                            src="images/tv.webp"
+                            alt="tv"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Wiki Page 2</li>
+                        <li><span class="type">Project</span>HTML Potluck</li>
                     </ul>
                 </div>
 
@@ -33,23 +33,22 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>HTML Attributes Review</li>
-                            <li><span class="type">Demo</span>HTML Anchors (Links)</li>
+                            <li><span class="type">Kahoot</span>HTML Children Review</li>
+                            <li><span class="type">Project</span>HTML Potluck</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>HTML Anchors (Links) [cont.]</li>
-                            <li><span class="type">Kahoot</span>HTML Indentation Review II</li>
+                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Wiki Page 2</li>
+                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
                         </ul>
                     </div>
                 </div>
