--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,22 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 19th, 2024</h1>
+            <h1>GDWD 105 - Agenda for January 22nd, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite TV series/anime?</li>
+                        <li>What was your favorite movie of 2023?</li>
                     </ul>
-                    <div class="img-container more-space-offset">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/tv.webp"
+                            src="images/lab-attire.webp"
                             alt="tv"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>HTML Potluck</li>
+                        <li>N/A</li>
                     </ul>
                 </div>
 
@@ -33,22 +33,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>HTML Children Review</li>
-                            <li><span class="type">Project</span>HTML Potluck</li>
+                            <li><span class="type">Lab Time</span>Assignment Feedback</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
+                            <li><span class="type">Lab Time</span>HTML Potluck - Other Options</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
