--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,22 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 23nd, 2024</h1>
+            <h1>GDWD 105 - Agenda for January 24nd, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite color?</li>
+                        <li>What would your spirit animal be?</li>
                     </ul>
-                    <div class="img-container ">
+                    <div class="img-container">
                         <img 
-                            src="images/painter-fox.jpg"
+                            src="images/spirit-animal-0.jpg"
                             alt="painter fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Basic CSS Drills</li>
+                        <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
                         <li><span class="type">Exercise</span>Color Palettes</li>
                     </ul>
                 </div>
@@ -34,23 +34,24 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>HTML Fundamentals</li>
-                            <li><span class="type">PowerPoints</span>Intro to CSS and CSS Properties</li>
+                            <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
+                            <li><span class="type">PowerPoint</span>CSS Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>CSS Colors and Text Styling</li>
+                            <li><span class="type">Demo</span>Divs, Spans, and Flow</li>
+                            <li><span class="type">PowerPoint</span>Document Flow</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Basic CSS Drills</li>
-                            <li><span class="type">Exercise</span>Color Palettes</li>
+                            <li><span class="type">Exercise</span>Document Flow Drills</li>
+                            <li><span class="type">Kahoot</span>CSS Rules Review</li>
                         </ul>
                     </div>
                 </div>
