--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,24 +8,22 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 26th, 2024</h1>
+            <h1>GDWD 105 - Agenda for January 29th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>Would you prefer a staycation? or a destination vacation?</li>
+                        <li>What is your favorite ice cream flavor? Any toppings?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/island-vacation.jpg"
-                            alt="cat on an island"
+                            src="images/icecream-cats.jpg"
+                            alt="lazy sundae"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
-                        <li><span class="type">Exercise</span>Container and Selectors Drills</li>
-                        <li><span class="type">Exercise</span>Upside-down Tetris</li>
+                        <li><span class="type">Project</span>Generic License</li>
                     </ul>
                 </div>
 
@@ -35,25 +33,22 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
-                            <li><span class="type">Demo</span>Combining CSS Selectors</li>
+                            <li><span class="type">Kahoot</span>CSS Selectors to English</li>
+                            <li><span class="type">Kahoot</span>English to CSS Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>CSS Selectors to English</li>
-                            <li><span class="type">Exercise</span>Containers and Selectors Drills</li>
+                            <li><span class="type">Project</span>Generic License</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Responsiveness - Part 1</li>
-                            <li><span class="type">Demo</span>Absolute vs Relative Units</li>
-                            <li><span class="type">Lab Time</span>Upside Down Tetris [cont.]</li>
+                            <li><span class="type">Project</span>Generic License [cont.]</li>
                         </ul>
                     </div>
                 </div>
