--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,22 +8,23 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 30th, 2024</h1>
+            <h1>GDWD 105 - Agenda for January 31st, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What element do you feel best represents you (Water, Earth, Fire, Wind)?</li>
+                        <li>What is one of your hobbies you do in your free time?</li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/lab-experiment.webp"
+                            src="images/cosplay.jpeg"
                             alt="lab in lab"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li>N/A</li>
+                        <li><span class="type">Exercise</span>Single Column Layouts Drills</li>
+                        <li><span class="type">Exercise</span>Product Showcase Site</li>
                     </ul>
                 </div>
 
@@ -33,21 +34,23 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Generic License</li>
+                            <li><span class="type">Quiz</span>CSS Fundamentals</li>
+                            <li><span class="type">PowerPoint</span>Page Layouts - Single Column Layouts</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Generic License | Extra Credit</li>
+                            <li><span class="type">Demo</span>Single Column Layouts</li>
+                            <li><span class="type">Exercise</span>Single Column Layouts Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Product Showcase Site</li>
                         </ul>
                     </div>
                 </div>
