--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 22st, 2024</h1>
+            <h1>GDWD 105 - Agenda for February 23rd, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather have the power to turn invisible,
-                            or levitate objects?
+                            Would you rather have: a bag that could hold anything, or
+                            your own pocket-dimension accessed via suitcase?
+
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/broom-cats.jpg"
-                            alt="true names"
+                            src="images/hoarder-fox.webp"
+                            alt="hoarder fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Hover Galleries</li>
+                        <li><span class="type">Project</span>Dropdown Menu Site</li>
                     </ul>
                 </div>
 
@@ -36,14 +37,15 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Hiding and Showing Content</li>
+                            <li><span class="type">Powerpoint</span>Navigation Layouts - Dropdown Menus</li>
+                            <li><span class="type">Demo</span>Dropdown Menus</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Hover Galleries</li>
+                            <li><span class="type">Project</span>Dropdown Menu Site [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
